# baraholca

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/apps/cart/: admin.py  apps.py  models.py
backend/apps/cart/api/v1/: serializers.py  urls.py  urls_cart.py  urls_favorite.py  views.py  views_cart.py
backend/apps/cart/migrations/: 0001_initial.py  0002_cart_cartitem.py
backend/apps/cart/tests/: test_cart_endpoints.py  test_favorite_endpoints.py
backend/apps/catalog/: admin.py  forms.py  models.py
backend/apps/catalog/api/v1/: filters.py  serializers.py  urls.py  views.py  views_search.py
backend/apps/catalog/migrations/: 0001_initial.py  0002_warehouse.py  0003_product.py  0004_productimage.py  0005_productstock.py  0006_productcharacteristic.py  0007_productgroup.py  0008_product_group_product_variant_color_and_more.py  0009_searchquery.py
backend/apps/catalog/static/admin/css/: gis_map_fix.css
backend/apps/catalog/templates/admin/catalog/: apply_discount.html
backend/apps/catalog/templates/admin/widgets/: working_hours.html
backend/apps/catalog/tests/: test_bought_together.py  test_catalog_endpoints.py  test_models.py  test_search_history.py
backend/apps/common/: apps.py  exception_handler.py  exceptions.py
backend/apps/notifications/: apps.py
backend/apps/notifications/sms/: base.py  console.py  factory.py  smsaero.py
backend/apps/notifications/sms/tests/: test_smsaero.py
backend/apps/orders/: admin.py  apps.py  models.py
backend/apps/orders/api/v1/: serializers.py  urls.py  views.py
backend/apps/orders/migrations/: 0001_initial.py  0002_order_cancelled_at.py  0003_alter_order_payment_status_alter_order_status.py  0004_paymentstatushistory.py  0005_alter_order_payment_method.py
backend/apps/orders/services/: allocation.py  checkout.py  order_status.py  payment_status.py  payment_transitions.py  status_transitions.py  warehouse_allocator.py
backend/apps/orders/tests/: test_checkout_endpoint.py  test_checkout_service.py  test_order_cancel.py  test_order_mark_paid.py  test_order_status_service.py  test_orders_read.py  test_payment_status_service.py  test_status_transitions.py  test_warehouse_allocator.py
backend/apps/reviews/: admin.py  models.py
backend/apps/reviews/api/v1/: serializers.py  urls.py  views.py
backend/apps/reviews/migrations/: 0001_initial.py  0002_review_is_published.py
backend/apps/reviews/tests/: test_review_endpoints.py
backend/apps/sellers/: admin.py  models.py
backend/apps/sellers/migrations/: 0001_initial.py  0002_sellerstaff.py  0003_seller_order_prefix.py  0004_populate_order_prefix.py  0005_alter_seller_order_prefix.py
backend/apps/users/: admin.py  models.py
backend/apps/users/api/v1/: serializers.py  urls.py  urls_auth.py  urls_user.py  utils.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_user_apple_id_user_phone_verified_and_more.py  0003_remove_user_social_avatar_url.py
backend/apps/users/tests/: test_auth_endpoints.py  test_profile_endpoints.py  test_sms_utils.py
backend/config/: settings.py  urls.py
docs/: 1c-integration.md  README.md  data-model.md  tech-debt.md
docs/guidelines/common/: clean_code.md  testing.md  typing.md  workflow.md
docs/guidelines/django/: error_handling.md  settings.md
docs/guidelines/fastapi/: error_handling.md  settings.md
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/online/baraxolkamarket/baraxolka_mobile/: MainActivity.kt
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/core/api/: api_client.dart  auth_interceptor.dart
mobile/lib/core/theme/: app_colors.dart  app_theme.dart
mobile/lib/core/utils/: price_format.dart
mobile/lib/features/auth/: auth_providers.dart  auth_service.dart  phone_login_screen.dart  session_gate.dart  sms_code_screen.dart  token_storage.dart
mobile/lib/features/auth/models/: auth_result.dart
mobile/lib/features/catalog/: catalog_providers.dart  catalog_screen.dart  catalog_service.dart
mobile/lib/features/catalog/models/: product.dart
mobile/lib/features/onboarding/: onboarding_screen.dart
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
scripts/: seed_warehouses.py
