[project]
name = "baraxolka-backend"
version = "0.1.0"
description = "Baraxolka marketplace backend (Django + DRF)"
requires-python = ">=3.12"
dependencies = [
    "django==6.0.6",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.5.1",
    "django-filter==25.2",
    "django-redis==7.0.0",
    "django-unfold==0.97.0",
    "drf-spectacular==0.29.0",
    "gunicorn==26.0.0",
    "pillow==12.2.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
    "redis==8.0.0",
    "whitenoise==6.12.0",
]

[tool.uv]
package = false
